Switch to Cerulean theme and fix navbar spacing

--- a/css/antnet.css
+++ b/css/antnet.css
@@ -112,6 +112,10 @@
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
 }
 
+.navbar-inner {
+  min-height: 40px;
+}
+
 #js-menu-desktop .icon-bar + .icon-bar {
   margin-top: 3px;
 }
